unpackaged/main/default/objects/Product2/fields/bt_stripe__Metadata__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Metadata__c</fullName>
    <description>Record metadata pull from Product.</description>
    <inlineHelpText>Record metadata pull from Product.</inlineHelpText>
    <label>Metadata</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>