unpackaged/main/default/objects/Product2/fields/bt_stripe__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Product is related to a Payment Gateway such as Stripe, set the lookup here. If the Product is created with a Gateway in Test Mode, the Product will only be accessible when testing, and vice versa for Live Mode.</description>
    <inlineHelpText>If this Product is related to a Payment Gateway such as Stripe, set the lookup here. If the Product is created with a Gateway in Test Mode, the Product will only be accessible when testing, and vice versa for Live Mode.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>