unpackaged/main/default/objects/Product2/fields/bt_stripe__Push_To_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Push_To_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push To Stripe</label>
    <type>Checkbox</type>
</CustomField>