unpackaged/main/default/objects/Product2/fields/bt_stripe__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Type__c</fullName>
    <description>The type of the Product. The product is either of type Service, which is eligible for use with Subscriptions and Plans or Good, which is eligible for use with Orders and SKUs.</description>
    <inlineHelpText>The type of the Product. The product is either of type Service, which is eligible for use with Subscriptions and Plans or Good, which is eligible for use with Orders and SKUs.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>