unpackaged/main/default/objects/Product2/fields/Stage_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Stage_Case_Owner__c</fullName>
    <label>Stage - Case Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Stage</valueSetName>
    </valueSet>
</CustomField>