unpackaged/main/default/objects/Product2/fields/Stage_Tax_Pro__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tax_Pro__c</fullName>
    <label>Stage - Tax Pro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Stage</valueSetName>
    </valueSet>
</CustomField>