unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>bt_stripe__Type__c</columns>
    <columns>Stage_Case_Owner__c</columns>
    <columns>Stage_Tax_Pro__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
</ListView>